<resources>
    <string name="app_name" translatable="false">AirView</string>
    <string name="screen1_summary" translatable="false">An application for UITer, provides useful information for you to have a great day at UIT</string>
    <string name="signUp">SIGN UP</string>
    <string name="signIn">SIGN IN</string>
    <string name="resetPwd">Reset your password?</string>
    <string name="back">BACK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPwd">Confirm password</string>
    <string name="or">OR</string>
    <string name="reset">RESET</string>
    <string name="oldPwd">Old password</string>
    <string name="newPwd">New password</string>
    <string name="errInput">Wrong username or password!</string>
    <string name="connErr">Connect failed!</string>
    <string name="networkErr">Network error!</string>
    <string name="resetSucc">Password changed</string>
    <string name="confirmErr">Confirm password not match!</string>
    <string name="loginSucc">Login successful</string>
    <string name="loginFailed">Login failed!</string>
    <string name="emailErr">Email already exists!</string>
    <string name="invalidEmail">Invalid email address!</string>
    <string name="userErr">Username already exists!</string>
    <string name="signupSucc">Signup successfully</string>
    <string name="welcome">"Welcome, "</string>
    <string name="title_activity_dashboard" translatable="false">DashboardActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="logout">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="chart">Chart</string>
    <string name="temp">Temperature</string>
    <string name="humid">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="weather">Weather</string>
    <string name="feelsLike">Feels like</string>
    <string name="notifiSetting">Notification Settings</string>
    <string name="selectSettingTv">Select unit options</string>
    <string name="save">Save</string>
    <string name="units">Units</string>
    <string name="windSpeed">Wind</string>
    <string name="clearSky">Clear Sky</string>
    <string name="fewClouds">Few Clouds</string>
    <string name="scatterClouds">Scattered Clouds</string>
    <string name="brokenClouds">Broken Clouds</string>
    <string name="showerRain">Shower Rain</string>
    <string name="rain">Rain</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="show">Show</string>
    <string name="selectAttr">Select Attributes</string>
    <string name="timeFrame">Timeframe</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="january">January,</string>
    <string name="february">February,</string>
    <string name="march">March,</string>
    <string name="april">April,</string>
    <string name="may">May,</string>
    <string name="june">June,</string>
    <string name="july">July,</string>q
    <string name="august">August,</string>
    <string name="september">September,</string>
    <string name="october">October,</string>
    <string name="november">November,</string>
    <string name="december">December,</string>
</resources>